# coffeepie

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  API.md  AVG_SLICE_COST.json  BOUNTIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COHESION.md  CONSTITUTION.md  CONTRIBUTING.md  DISASTER_RECOVERY.md  EMERGENCY_PROTOCOL.md  LCA.md  LICENSE  MANIFESTO.md  Makefile  NETWORK.md  PKI.md  PROVIDERS.md  README.md  ROADMAP.json  SCHEDULING.md  SECURITY.md  SECURITY_AUDITS.md  SECURITY_AUDIT_2026-05-25.md  SEO_AUDITS.md  THOUGHTS.md  TRANSLATIONS.md  TRANSLATIONS_AUDIT_REPORT.md  UI-UX_AUDITS.md  docker-compose.yml  out_debug.txt  scan_translations.py  update_avg_slice_cost.py
coffeepie_orchestrator/actor/: .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  README.md  SECURITY.md
coffeepie_orchestrator/actor/.github/workflows/: codeql.yml
coffeepie_orchestrator/actor/assets/scripts/: register-service.ps1  unregister-service.ps1
coffeepie_orchestrator/actor/assets/testcerts/: cert.pem  key.pem  key_pass.pem
coffeepie_orchestrator/actor/crates/client/: Cargo.toml  build.rs
coffeepie_orchestrator/actor/crates/client/src/: gui.rs  main.rs  platform.rs  session.rs  ws_reqs.rs
coffeepie_orchestrator/actor/crates/client/src/tasks/: deadline.rs  idle.rs  mod.rs
coffeepie_orchestrator/actor/crates/client/src/testing/: mock.rs
coffeepie_orchestrator/actor/crates/client/src/tests/: mod.rs
coffeepie_orchestrator/actor/crates/client/src/unix/: mod.rs
coffeepie_orchestrator/actor/crates/client/src/windows/: mod.rs
coffeepie_orchestrator/actor/crates/client/src/ws_workers/: alive.rs  close.rs  logoff.rs  macros.rs  mod.rs  pong.rs  screenshot.rs
coffeepie_orchestrator/actor/crates/config/: Cargo.toml  build.rs
coffeepie_orchestrator/actor/crates/config-unmanaged/: Cargo.toml  build.rs
coffeepie_orchestrator/actor/crates/config-unmanaged/fluid/: config-unmanaged.fl
coffeepie_orchestrator/actor/crates/config-unmanaged/src/: callbacks.rs  config_unmanaged_fltk.rs  main.rs  regcfg.rs
coffeepie_orchestrator/actor/crates/config/fluid/: config.fl
coffeepie_orchestrator/actor/crates/config/src/: callbacks.rs  config_fltk.rs  main.rs  regcfg.rs
coffeepie_orchestrator/actor/crates/gui-helper/: Cargo.toml  build.rs
coffeepie_orchestrator/actor/crates/gui-helper/src/: main.rs
coffeepie_orchestrator/actor/crates/service/: Cargo.toml  build.rs
coffeepie_orchestrator/actor/crates/service/src/: common.rs  computer.rs  main.rs  platform.rs  tests.rs
coffeepie_orchestrator/actor/crates/service/src/actors/: mod.rs  testing.rs
coffeepie_orchestrator/actor/crates/service/src/actors/managed/: mod.rs  tests.rs
coffeepie_orchestrator/actor/crates/service/src/actors/unmanaged/: mod.rs  tests.rs
coffeepie_orchestrator/actor/crates/service/src/testing/: mock.rs
coffeepie_orchestrator/actor/crates/service/src/workers/: macros.rs  mod.rs
coffeepie_orchestrator/actor/crates/service/src/workers/http/: logoff.rs  (+6 more)
coffeepie_orchestrator/actor/crates/shared/: Cargo.toml  build.rs
coffeepie_orchestrator/actor/crates/shared/src/: config.rs  consts.rs  installer.rs  lib.rs  log.rs  service.rs  system.rs
coffeepie_orchestrator/actor/crates/shared/src/sync/: mod.rs  oncesignal.rs
coffeepie_orchestrator/actor/crates/shared/src/testing/: mock.rs  mod.rs  test_certs.rs
coffeepie_orchestrator/actor/crates/shared/src/tls/: certool.rs  ciphers.rs  mod.rs  noverify.rs
coffeepie_orchestrator/actor/crates/shared/src/unix/: config.rs  mod.rs
coffeepie_orchestrator/actor/crates/shared/src/utils/: network.rs
coffeepie_orchestrator/actor/crates/shared/src/windows/: config.rs  event.rs  installer.rs  mod.rs  msgwindow.rs  safehandle.rs  sens.rs  service.rs
coffeepie_orchestrator/actor/crates/shared/src/ws/: mod.rs  rcptraits.rs  request_tracker.rs  types.rs
coffeepie_orchestrator/actor/crates/shared/tests/: event_tests.rs  test_tls_ciphers.rs  test_ws_server.rs
coffeepie_orchestrator/actor/notes/: linux.txt  windows.txt
coffeepie_orchestrator/actor/notes/macos/: com.virtualcable.udsactor.server.plist  com.virtualcable.udsclient.plist  com.virtualcable.udsserver.plist  notes.txt  schema.txt  signing.txt
coffeepie_orchestrator/dc-agent/: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  SECURITY_AUDITS.md  coffeepie-dc-agent.service  openapi.json
coffeepie_orchestrator/dc-agent/src/: adapter.rs  heartbeat.rs  main.rs  placement.rs  types.rs
coffeepie_orchestrator/dc-agent/src/adapters/: mod.rs  proxmox.rs
coffeepie_orchestrator/dc-agent/src/api/: mod.rs
coffeepie_orchestrator/scheduler/: Cargo.toml
coffeepie_orchestrator/scheduler/src/: lib.rs
coffeepie_orchestrator/tunnel-server/: .gitignore  Cargo.toml  README.md  notes.md  udstunnel.conf
coffeepie_orchestrator/tunnel-server/.github/workflows/: rust.yml
coffeepie_orchestrator/tunnel-server/crates/server/: Cargo.toml
coffeepie_orchestrator/tunnel-server/crates/server/src/: consts.rs  main.rs
coffeepie_orchestrator/tunnel-server/crates/server/src/broker/: mod.rs  request.rs  response.rs  tests.rs
coffeepie_orchestrator/tunnel-server/crates/server/src/config/: mod.rs
coffeepie_orchestrator/tunnel-server/crates/server/src/connection/: connect.rs  mod.rs  recover.rs  tests.rs  types.rs
coffeepie_orchestrator/tunnel-server/crates/server/src/session/: buffer.rs  mod.rs
coffeepie_orchestrator/tunnel-server/crates/server/src/stream/: mod.rs
coffeepie_orchestrator/tunnel-server/crates/shared/: Cargo.toml
coffeepie_orchestrator/tunnel-server/crates/shared/src/: errors.rs  lib.rs  log.rs  utils.rs
coffeepie_orchestrator/tunnel-server/crates/shared/src/crypt/: consts.rs  mod.rs  stream.rs  tunnel.rs  types.rs
coffeepie_orchestrator/tunnel-server/crates/shared/src/protocol/: command.rs  consts.rs  handshake.rs  mod.rs  proxy_v2.rs  ticket.rs
coffeepie_orchestrator/tunnel-server/crates/shared/src/system/: mod.rs  trigger.rs
tools/admin/: Cargo.toml
tools/benchmark/: Cargo.toml  README.md
tools/dev/: Cargo.toml
tools/monitoring/: Cargo.toml
tools/security/: Cargo.toml
(+2136 files in other folders)
