[package]
name = "coffeepie-dc-agent"
version = "0.1.0"
edition = "2024"
description = "Coffee Pie DC Agent - hypervisor-agnostic datacenter orchestration agent"
license = "BSD-3-Clause"

[dependencies]
# Async runtime
tokio = { version = "1.50.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
    "net",
    "process",
    "signal",
] }

# HTTP server
axum = { version = "0.8.8", features = ["json", "tokio", "ws"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# HTTP client (for calling proxmox_backend API)
reqwest = { version = "0.13.2", features = ["json", "rustls"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "local-time"] }
tracing-log = "0.2.0"

# Error handling
anyhow = "1.0"

# Time
chrono = { version = "0.4.44" }

# Async traits
async-trait = "0.1.89"

# UUID generation for instance IDs
uuid = { version = "1.18.1", features = ["v4"] }
