[workspace]
members = ["crates/server", "crates/shared"]
resolver = "3"

[workspace.package]
version = "5.0.0"
edition = "2024"
authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"


[workspace.dependencies]
# Utilities
anyhow = "1.0"
thiserror = "2.0"
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4.42" }
num_enum = "0.7.5"

# randomness
rand = "0.10.0"

# SSL/TLS
rustls = "0.23.37"
rustls-native-certs = "0.8.3"

# async & async TLS
tokio-rustls = "0.26.4"
tokio = { version = "1.50.0", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "process",
    "signal",
] }
futures = "0.3.32"
async-trait = "0.1.89"
tokio-test = "0.4.5"

# channel
flume = { version = "0.12.0", features = ["async"] }

# HTTP client
reqwest = { version = "0.13.1", features = ["json", "rustls", "system-proxy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Json handling
serde_json = "1.0"
# toml for config
toml = "1.0"

# Encoding/Decoding
base64 = "0.22.1"

# i18n
gettext = "0.4.0"
rust-embed = "8.9.0"
sys-locale = "0.3.2"

# Encryption
aes-gcm = "0.10.3"
hkdf = "0.12"
sha2 = "0.10.9"

# Post-quantum cryptography
libcrux-ml-kem = "0.0.8"

# regex
regex = "1.12"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "local-time",
] }
tracing-log = "0.2.0"

# Testing
serial_test = "3.4.0"
mockito = "1.7"
