[package]
name = "udsactor-client"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
shared = { path = "../shared" }

tokio = { workspace = true }

reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }

axum = { workspace = true }
base64 = { workspace = true }


[build-dependencies]
builder = { path = "../builder" }


[dev-dependencies]
mockito = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
libc = { workspace = true }