[package]
name = "udsactor-config"
version = "0.1.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }

# Gui
fltk = { workspace = true }

reqwest = { workspace = true }

[build-dependencies]
builder = { path = "../builder" }
