[package]
name = "shared"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[lib]
path = "src/lib.rs"

# Windows dependencies
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-core = { workspace = true }

widestring = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }
whoami = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true }
toml = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
toml = { workspace = true }
whoami = { workspace = true }
user-idle = { workspace = true }

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }

reqwest = { workspace = true }
ipnetwork = { workspace = true }

# For maintain compat with 4.0, we need to decrypt the pem key
# so we use pkcs8 an pem crates
pkcs8 = { workspace = true }
pem = { workspace = true }

rustls = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
axum-server = { workspace = true }
socket2 = { workspace = true }     # To disable dual stack on listening, make IPv4 and IPv6 listeners separately

# Web services
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# json & related
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

rand = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
local-ip-address = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
